# picam_project

./: README.md  pyproject.toml
picam_project/: db.sqlite3  manage.py
picam_project/picam_project/: asgi.py  settings.py  urls.py  wsgi.py
picam_project/webcam/: models.py  views.py
picam_project/webcam/migrations/: 0001_initial.py
picam_project/webcam/templates/webcam/: index.html
